--- a/settings.gradle
+++ b/settings.gradle
@@ -9,4 +9,5 @@ include 'kodilla-stream'
 include 'kodilla-exception'
 include 'kodilla-spring-intro'
 include 'kodilla-spring'
+include 'kodilla-patterns'
 
